--- a/templates/bandwidth_beff.in
+++ b/templates/bandwidth_beff.in
@@ -1,5 +1,9 @@
 # bandwidth_beff job template
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/b_eff
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/b_eff
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/b_eff"
 
