--- a/templates/bandwidth_imb.in
+++ b/templates/bandwidth_imb.in
@@ -1,6 +1,10 @@
 # bandwidth_imb job template
 # Uses Intel MPI Benchmarks Sendrecv test
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/IMB-MPI1
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/IMB-MPI1
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/IMB-MPI1 -npmin NUM_PROCS_HERE sendrecv"
 
