--- a/templates/bandwidth_osumsgrate.in
+++ b/templates/bandwidth_osumsgrate.in
@@ -1,6 +1,11 @@
 # bandwidth_osumsgrate job template
 # Uses the OSU message rate test
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/osu_mbw_mr
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/osu_mbw_mr
+
 
 # does not run on less than 2 processes 
 ONEPROC=`expr NUM_PROCS_HERE \< 2`
