--- a/templates/collective_mpibenchbarrier.in
+++ b/templates/collective_mpibenchbarrier.in
@@ -2,6 +2,10 @@
 # LLNL mpiBench_Barrier benchmark
 # using the all-to-all nonblocking pattern
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/mpiBench_Barrier 
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/mpiBench_Barrier
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/mpiBench_Barrier -c"
 
