--- a/templates/hpccg_100cubed.in
+++ b/templates/hpccg_100cubed.in
@@ -1,4 +1,8 @@
 # HPCCG 100x100x100 template
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/test_HPCCG
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/test_HPCCG
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/test_HPCCG 100 100 100"
 
