--- a/templates/iozone.in
+++ b/templates/iozone.in
@@ -3,6 +3,10 @@
 # assumes you can ssh w/o a password between nodes in a job as
 # a user
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/iozone_aggregate_bw
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/iozone_aggregate_bw
 
 CMD="/projects/tbird/jbogden/cbench/tools/iozone_aggregate_bw --machinefile $PBS_NODEFILE --fs '/scratch3/jbogden/iozone' --rsh /usr/bin/ssh --debug 1 --size 8g"
 
