--- a/templates/irs_zrad3d.in
+++ b/templates/irs_zrad3d.in
@@ -1,5 +1,9 @@
 # LLNL IRS application with zrad3d input deck job template
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/irs
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/irs
 
 # need to make an isolated directory for each IRS run to keep them
 # from stepping on each others output files
