--- a/templates/lammps_rhodolong.scaled.in
+++ b/templates/lammps_rhodolong.scaled.in
@@ -7,6 +7,10 @@
 # and restart from a set of restart files at least once.
 #
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/lmp_cbench
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/lmp_cbench
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench SCALING_PARAMS_HERE"
 
