--- a/templates/latency_laten.in
+++ b/templates/latency_laten.in
@@ -1,5 +1,9 @@
 # latency_laten job template
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/laten
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/laten
 
 # laten does not like odd numbers of processes, so don't
 # run if we an odd number
