--- a/templates/mpisanity_routecheck.in
+++ b/templates/mpisanity_routecheck.in
@@ -1,6 +1,10 @@
 # mpisanity_routecheck job template
 # uses the venerable mpi_routecheck test
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/mpi_routecheck
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/mpi_routecheck
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/mpi_routecheck -emax 1048576"
 
