--- a/templates/shakedown_imb.in
+++ b/templates/shakedown_imb.in
@@ -3,6 +3,10 @@
 # smaller buffers, to keep it from blowing up on memory
 # like it loves to do
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/IMB-MPI1
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/IMB-MPI1
 
 # build the lengths file if it doesn't exist
 if [ ! -f ./lengths ]; then
