--- a/templates/skeleton_setvars.in
+++ b/templates/skeleton_setvars.in
@@ -3,6 +3,10 @@
 #
 #
 # NOTE: bash syntax is used and required here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/mpi_hello
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/mpi_hello
 
 CBENCHOME=CBENCHOME_HERE
 CBENCHTEST=CBENCHTEST_HERE
