--- a/templates/sweep3d_150std.in
+++ b/templates/sweep3d_150std.in
@@ -1,6 +1,10 @@
 # sweep3d job template
 # Uses LANL's SWEEP3D benchmark code 
 # NOTE: bash syntax is used here
+#
+# Cbench job binary: CBENCHTEST_BIN_HERE/sweep
+
+cbench_check_for_bin CBENCHTEST_BIN_HERE/sweep
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/sweep"
 
