--- a/templates/amg_amg.in
+++ b/templates/amg_amg.in
@@ -17,12 +17,13 @@ cbench_check_for_bin CBENCHTEST_BIN_HERE/amg2006
 PX=PX_HERE
 PY=PY_HERE
 PZ=PZ_HERE
+Rxyz="14 14 14"
 
 # Run solver 3 
 cbench_echo ""
 cbench_echo "=========== solver 3 ============="
 cbench_echo ""
-CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/amg2006 -P $PX $PY $PZ -r 17 17 17 -printstats -solver 3"
+CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/amg2006 -P $PX $PY $PZ -r $Rxyz -printstats -solver 3"
 cbench_run_cmd $CMD
 timestamp=`date --iso-8601=seconds`
 cbench_echo "Cbench amg solver3 timestamp: $timestamp"
@@ -31,7 +32,7 @@ cbench_echo "Cbench amg solver3 timestamp: $timestamp"
 cbench_echo ""
 cbench_echo "=========== solver 4 ============="
 cbench_echo ""
-CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/amg2006 -P $PX $PY $PZ -r 17 17 17 -printstats -solver 4"
+CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/amg2006 -P $PX $PY $PZ -r $Rxyz -printstats -solver 4"
 cbench_run_cmd $CMD
 timestamp=`date --iso-8601=seconds`
 cbench_echo "Cbench amg solver4 timestamp: $timestamp"
